--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+html, body {
+  background-color: rgb(255, 244, 232)
+}
+
 .App-logo {
   animation: App-logo-spin infinite 3s linear;
   height: 80px;
@@ -15,8 +19,21 @@
   to { transform: rotate(360deg); }
 }
 
+.wildcard {
+  margin-left: -160px;
+  background-color: tomato;
+}
+
+.wildcard:target > .App-logo {
+  animation: App-logo-spin infinite 0.00001s linear;
+}
+
 .navbar {
   padding: 20px;
+}
+
+.navbar{
+  margin: 10px
 }
 
 .form-horizontal {
