--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,3 +1,10 @@
 .login__Form {
     float: left;
 }
+
+.form-horizontal {
+    width: 30%;
+    text-align: center;
+    align-content: center;
+    display: inline-block;
+  }
