--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,20 +3,15 @@
 }
 
 html, body {
-  background-color: rgb(255, 244, 232)
+  background-color: rgb(247, 240, 233)
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 3s linear;
+  animation: App-logo-spin infinite 1s linear;
   height: 80px;
   float: left;
   margin-left: -130px;
   margin-top: -30px;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
 
 .wildcard {
@@ -27,6 +22,16 @@ html, body {
 .wildcard:target > .App-logo {
   animation: App-logo-spin infinite 0.00001s linear;
 }
+@keyframes App-logo-spin {
+  /* from { transform: rotate(0deg); }
+  to { transform: rotate(-40deg); } */
+    0% { transform: translateX(0%); } 
+    30% { transform: translateX(20%) rotate(3deg); } 
+    45% { transform: translateX(-15%) rotate(-3deg); } 
+    60% { transform: translateX(10%) rotate(2deg); }
+    75% { transform: translateX(-5%) rotate(-1deg); }
+    100% { transform: translateX(0%); } 
+ } 
 
 .navbar {
   padding: 20px;
