--- a/src/Checklist/ChecklistCSS.css
+++ b/src/Checklist/ChecklistCSS.css
@@ -1,3 +1,12 @@
 li {
-	list-style-type: none;
+  list-style-type: none;
+}
+
+.ChecklistForm {
+  width: 1500px;
+  margin-right: 50%;
+  margin-top: 25px;
+  text-align: center;
+  align-content: center;
+  display: inline-block;
 }
