--- a/src/Profile/ProfileFormStyle.css
+++ b/src/Profile/ProfileFormStyle.css
@@ -1,4 +1,10 @@
-/* Form {
-    align-self: center;
+.RegisterForm {
+    width: 1500px;
+    /* margin-left: 25px; */
+    margin-right: 25px;
+    margin-top: 25px;
+    text-align: center;
     align-content: center;
-} */
+    display: inline-block;
+  }
+
