--- a/src/Trips/TripCSS.css
+++ b/src/Trips/TripCSS.css
@@ -8,3 +8,13 @@
     display: inline-block;
   }
 
+#tripPanel {
+  width:100%;
+  text-align: center;
+  align-content: center;
+  display: inline-block;
+}
+
+#tripImg {
+  width: 880px;
+}
